--- a/src/Components/portfolio/Portfolio.css
+++ b/src/Components/portfolio/Portfolio.css
@@ -44,7 +44,11 @@
 /* #################### MEDIA QUERIES (SMALL DEVICES) ############# */
 @media screen and (max-width:600px){
     .portfolio_container{
-        grid-template-columns: 1fr;
-        gap: 1rem;
+        grid-template-columns: 1fr ;
+        gap: 2rem;
+    
+    }
+    section{
+        /* margin-top: 66rem; */
     }
 }
