--- a/src/Components/services/services.css
+++ b/src/Components/services/services.css
@@ -8,7 +8,7 @@
     background: var(--color-bg-variant);
     border-radius: 0 0 2rem 2rem ;
     border: 1px solid var(--color-primary);
-    height: fit-content;
+    /* height: fit-content; */
     transition: var(--transition);
 }
 
@@ -33,7 +33,7 @@
 .service_list{
     padding: 2rem;
 }
-.services_list li{
+.service_list li{
     display: flex;
     gap: 3rem;
     margin-bottom: 0.8rem;
@@ -52,9 +52,6 @@
     .services_container{
         grid-template-columns: 1fr 1fr;
         gap: 2rem;
-    }
-    .service{
-        height: auto;
     }
 }
 
